--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body {
 }
 #arena {
   border: none;
-  background: rgba(30,36,44,0.5);
+  background: orange;
   box-shadow: 0 0 24px #000;
   margin-top: 30px;
 }
